[package]
name = "httpclient"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "httpclient_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trust-dns-resolver = "0.23"
whois-service = "0.2"

[profile.release]
opt-level = "s"        # 优先优化体积（可选"z"极致压缩，需测试性能影响）
codegen-units = 1      # 单编译单元，让LLVM做全局优化（体积更小、性能更好）
lto = true             # 链接时优化，消除冗余代码
panic = "abort"        # 禁用panic展开，减小体积并提升性能
strip = true           # 剥离调试符号（稳定版直接生效）
